# wordle

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  softap_example_main.c  words.h
main/assets/: index.html  script.js  style.css
